# test_github

./: CHANGELOG.rst  autotag.sh  index.css  index.html  package.xml  test.sh
.github/: pr-labeler.yml  release-drafter.yml
.github/workflows/: auto-assign.yml  check_release.yml  deploy_pr.yml  labeler.yml  tag-release.yml  test.yml
